--- a/HW1/Part3_LinearClassifier.ipynb
+++ b/HW1/Part3_LinearClassifier.ipynb
@@ -1025,8 +1025,6 @@
      "data": {
       "text/markdown": [
        "\n",
-       "**Your answer:**\n",
-       "\n",
        "The selection of $\\Delta > 0$ in the SVM loss function is arbitrary because the regularization term controls the model's complexity, which affects the margin $\\Delta$.\n",
        "The regularization term encourages a simpler decision boundary, reducing the number of possible boundaries.\n",
        "Different values of $\\Delta$ may be suitable for different datasets or applications, but the regularization term ensures that the model can generalize well to unseen data.\n",
@@ -1073,16 +1071,9 @@
      "data": {
       "text/markdown": [
        "\n",
-       "**Your answer:**\n",
+       "1. The linear model learns a linear decision boundary and attempts to distinguish between different classes. The model in our case is learning the weights of the data which are scanned handwritten digits represented as pixels with varied intensity (representing how light or dark the pixel is). As the model is learning the weights for each pixel, it assigns weights according to relationships and may put more weight to pixels that make up the border of a digit or the center (for example). This can lead to potential classification errors when images are rotated, or if a digit was written at an angle. This can also cause classification errors between digits that share similarities such as 3 and 8 or 5 and 6. \n",
        "\n",
-       "\n",
-       "Write your answer using **markdown** and $\\LaTeX$:\n",
-       "```python\n",
-       "# A code block\n",
-       "a = 2\n",
-       "```\n",
-       "An equation: $e^{i\\pi} -1 = 0$\n",
-       "\n"
+       "2. kNN , in general, also tries to identify classes based on a patters in the input data and its features, but kNN does not learn a decision boundary, but runs over many instances and tries to classify them based on their nearest neighbors. \n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1136,16 +1127,9 @@
      "data": {
       "text/markdown": [
        "\n",
-       "**Your answer:**\n",
+       "1. We can see that we converge quickly and that the validation and training loss decrease in the same direction which implies that our learning rate is *good*. When the learning rate is set to a high value, the model converges quickly, but it may only reach a local minimum, which may not have the best performance, and the optimization may miss the mininum. A low learning rate takes longer to converge but it may produce better results.\n",
        "\n",
-       "\n",
-       "Write your answer using **markdown** and $\\LaTeX$:\n",
-       "```python\n",
-       "# A code block\n",
-       "a = 2\n",
-       "```\n",
-       "An equation: $e^{i\\pi} -1 = 0$\n",
-       "\n"
+       "2. Based on the metrics, we can see that as we approach concergence the validation accuracy is lower than training accuracy so there may be some overfitting (slight overfitting).\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1158,13 +1142,6 @@
    "source": [
     "display_answer(hw1.answers.part3_q3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
