--- a/HW1/Part0_Intro.ipynb
+++ b/HW1/Part0_Intro.ipynb
@@ -19,7 +19,7 @@
     "| #       |              Name |             Id |             email |\n",
     "|---------|-------------------|----------------|------------------ |\n",
     "|Student 1|  [your name here] | [your id here] | [your email here] |\n",
-    "|Student 2|  [your name here] | [your id here] | [your email here] |"
+    "|Student 2| Ilana Sivan | 205634272 | ilana.sivan.il@gmail.com |"
    ]
   },
   {
