--- a/HW1/Part0_Intro.ipynb
+++ b/HW1/Part0_Intro.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,11 +20,12 @@
     "\n",
     "| #       |              Name |             Id |             email |\n",
     "|---------|-------------------|----------------|------------------ |\n",
-    "|Student 1|  [your name here] | [your id here] | [your email here] |\n",
+    "|Student 1|  Ben Sapirstein | 205987126 | ben.sapirstein@gmail.com |\n",
     "|Student 2| Ilana Sivan | 205634272 | ilana.sivan.il@gmail.com |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
