answers and exp2

--- a/HW2/Part2_Optimization.ipynb
+++ b/HW2/Part2_Optimization.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,9 +138,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class Optimizer in module hw2.optimizers:\n",
+      "\n",
+      "class Optimizer(abc.ABC)\n",
+      " |  Optimizer(params)\n",
+      " |  \n",
+      " |  Base class for optimizers.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      Optimizer\n",
+      " |      abc.ABC\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, params)\n",
+      " |      :param params: A sequence of model parameters to optimize. Can be a\n",
+      " |      list of (param,grad) tuples as returned by the Layers, or a list of\n",
+      " |      pytorch tensors in which case the grad will be taken from them.\n",
+      " |  \n",
+      " |  step(self)\n",
+      " |      Updates all the registered parameter values based on their gradients.\n",
+      " |  \n",
+      " |  zero_grad(self)\n",
+      " |      Sets the gradient of the optimized parameters to zero (in place).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Readonly properties defined here:\n",
+      " |  \n",
+      " |  params\n",
+      " |      :return: A sequence of parameter tuples, each tuple containing\n",
+      " |      (param_data, param_grad). The data should be updated in-place\n",
+      " |      according to the grad.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __abstractmethods__ = frozenset({'step'})\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import hw2.optimizers as optimizers\n",
     "help(optimizers.Optimizer)"
@@ -172,9 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diff=1.7634911273489706e-05\n"
+     ]
+    }
+   ],
    "source": [
     "# Test VanillaSGD\n",
     "torch.manual_seed(42)\n",
@@ -212,9 +274,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class Trainer in module hw2.training:\n",
+      "\n",
+      "class Trainer(abc.ABC)\n",
+      " |  Trainer(model, loss_fn, optimizer, device=None)\n",
+      " |  \n",
+      " |  A class abstracting the various tasks of training models.\n",
+      " |  \n",
+      " |  Provides methods at multiple levels of granularity:\n",
+      " |  - Multiple epochs (fit)\n",
+      " |  - Single epoch (train_epoch/test_epoch)\n",
+      " |  - Single batch (train_batch/test_batch)\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      Trainer\n",
+      " |      abc.ABC\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, model, loss_fn, optimizer, device=None)\n",
+      " |      Initialize the trainer.\n",
+      " |      :param model: Instance of the model to train.\n",
+      " |      :param loss_fn: The loss function to evaluate with.\n",
+      " |      :param optimizer: The optimizer to train with.\n",
+      " |      :param device: torch.device to run training on (CPU or GPU).\n",
+      " |  \n",
+      " |  fit(self, dl_train: torch.utils.data.dataloader.DataLoader, dl_test: torch.utils.data.dataloader.DataLoader, num_epochs, checkpoints: str = None, early_stopping: int = None, print_every=1, **kw) -> cs3600.train_results.FitResult\n",
+      " |      Trains the model for multiple epochs with a given training set,\n",
+      " |      and calculates validation loss over a given validation set.\n",
+      " |      :param dl_train: Dataloader for the training set.\n",
+      " |      :param dl_test: Dataloader for the test set.\n",
+      " |      :param num_epochs: Number of epochs to train for.\n",
+      " |      :param checkpoints: Whether to save model to file every time the\n",
+      " |          test set accuracy improves. Should be a string containing a\n",
+      " |          filename without extension.\n",
+      " |      :param early_stopping: Whether to stop training early if there is no\n",
+      " |          test loss improvement for this number of epochs.\n",
+      " |      :param print_every: Print progress every this number of epochs.\n",
+      " |      :return: A FitResult object containing train and test losses per epoch.\n",
+      " |  \n",
+      " |  test_batch(self, batch) -> cs3600.train_results.BatchResult\n",
+      " |      Runs a single batch forward through the model and calculates loss.\n",
+      " |      :param batch: A single batch of data  from a data loader (might\n",
+      " |          be a tuple of data and labels or anything else depending on\n",
+      " |          the underlying dataset.\n",
+      " |      :return: A BatchResult containing the value of the loss function and\n",
+      " |          the number of correctly classified samples in the batch.\n",
+      " |  \n",
+      " |  test_epoch(self, dl_test: torch.utils.data.dataloader.DataLoader, **kw) -> cs3600.train_results.EpochResult\n",
+      " |      Evaluate model once over a test set (single epoch).\n",
+      " |      :param dl_test: DataLoader for the test set.\n",
+      " |      :param kw: Keyword args supported by _foreach_batch.\n",
+      " |      :return: An EpochResult for the epoch.\n",
+      " |  \n",
+      " |  train_batch(self, batch) -> cs3600.train_results.BatchResult\n",
+      " |      Runs a single batch forward through the model, calculates loss,\n",
+      " |      preforms back-propagation and uses the optimizer to update weights.\n",
+      " |      :param batch: A single batch of data  from a data loader (might\n",
+      " |          be a tuple of data and labels or anything else depending on\n",
+      " |          the underlying dataset.\n",
+      " |      :return: A BatchResult containing the value of the loss function and\n",
+      " |          the number of correctly classified samples in the batch.\n",
+      " |  \n",
+      " |  train_epoch(self, dl_train: torch.utils.data.dataloader.DataLoader, **kw) -> cs3600.train_results.EpochResult\n",
+      " |      Train once over a training set (single epoch).\n",
+      " |      :param dl_train: DataLoader for the training set.\n",
+      " |      :param kw: Keyword args supported by _foreach_batch.\n",
+      " |      :return: An EpochResult for the epoch.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __abstractmethods__ = frozenset({'test_batch', 'train_batch'})\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import hw2.training as training\n",
     "help(training.Trainer)"
@@ -243,9 +395,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Train: 50000 samples\n",
+      "Test: 10000 samples\n"
+     ]
+    }
+   ],
    "source": [
     "data_dir = os.path.expanduser('~/.pytorch-datasets')\n",
     "ds_train = torchvision.datasets.CIFAR10(root=data_dir, download=True, train=True, transform=tvtf.ToTensor())\n",
@@ -275,9 +438,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_batch (Avg. Loss 3.195, Accuracy 35.0): 100%|█| 2/2 [00:00<00:00, 227.56it\n",
+      "train_batch (Avg. Loss 2.467, Accuracy 30.0): 100%|█| 2/2 [00:00<00:00, 371.59it\n",
+      "train_batch (Avg. Loss 2.104, Accuracy 55.0): 100%|█| 2/2 [00:00<00:00, 361.27it\n",
+      "train_batch (Avg. Loss 1.597, Accuracy 65.0): 100%|█| 2/2 [00:00<00:00, 349.83it\n",
+      "train_batch (Avg. Loss 1.366, Accuracy 95.0): 100%|█| 2/2 [00:00<00:00, 368.34it\n",
+      "train_batch (Avg. Loss 1.390, Accuracy 50.0): 100%|█| 2/2 [00:00<00:00, 165.36it\n",
+      "train_batch (Avg. Loss 1.967, Accuracy 70.0): 100%|█| 2/2 [00:00<00:00, 374.94it\n",
+      "train_batch (Avg. Loss 1.325, Accuracy 80.0): 100%|█| 2/2 [00:00<00:00, 394.80it\n",
+      "train_batch (Avg. Loss 1.479, Accuracy 75.0): 100%|█| 2/2 [00:00<00:00, 339.39it\n",
+      "train_batch (Avg. Loss 1.101, Accuracy 85.0): 100%|█| 2/2 [00:00<00:00, 320.81it\n",
+      "train_batch (Avg. Loss 1.184, Accuracy 70.0): 100%|█| 2/2 [00:00<00:00, 382.64it\n",
+      "train_batch (Avg. Loss 0.966, Accuracy 75.0): 100%|█| 2/2 [00:00<00:00, 392.60it\n",
+      "train_batch (Avg. Loss 1.421, Accuracy 85.0): 100%|█| 2/2 [00:00<00:00, 332.95it\n",
+      "train_batch (Avg. Loss 0.896, Accuracy 100.0): 100%|█| 2/2 [00:00<00:00, 333.78i\n",
+      "train_batch (Avg. Loss 0.588, Accuracy 100.0): 100%|█| 2/2 [00:00<00:00, 337.60i\n",
+      "train_batch (Avg. Loss 0.577, Accuracy 85.0): 100%|█| 2/2 [00:00<00:00, 355.37it\n",
+      "train_batch (Avg. Loss 1.296, Accuracy 65.0): 100%|█| 2/2 [00:00<00:00, 359.53it\n",
+      "train_batch (Avg. Loss 1.147, Accuracy 85.0): 100%|█| 2/2 [00:00<00:00, 354.82it\n",
+      "train_batch (Avg. Loss 0.598, Accuracy 100.0): 100%|█| 2/2 [00:00<00:00, 351.86i\n",
+      "train_batch (Avg. Loss 0.381, Accuracy 100.0): 100%|█| 2/2 [00:00<00:00, 363.77i\n"
+     ]
+    }
+   ],
    "source": [
     "import hw2.layers as layers\n",
     "import hw2.answers as answers\n",
@@ -319,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,8 +544,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Define a function to train a model with our Trainer and various optimizers\n",
     "def train_with_optimizer(opt_name, opt_class, fig):\n",
@@ -714,7 +906,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -728,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
