--- a/HW2/Part0_Intro.ipynb
+++ b/HW2/Part0_Intro.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "| #       |              Name |             Id |             email |\n",
     "|---------|-------------------|----------------|------------------ |\n",
-    "|Student 1|  [your name here] | [your id here] | [your email here] |\n",
-    "|Student 2|  [your name here] | [your id here] | [your email here] |"
+    "|Student 1|  Ben Sapirstein | 205987126 | ben.sapirstein@gmail.com |\n",
+    "|Student 2| Ilana Sivan | 205634272 | ilana.sivan.il@gmail.com |"
    ]
   },
   {
@@ -83,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
